# disk-cleanup-skills

./: .gitignore  LICENSE  README.en.md  README.md  SKILL.md  config.example.toml  pyproject.toml
agents/: README.md  openai.yaml
assets/: README.md
references/: audit.md  clean.md  deep-research-report.md
rules/: README.md  development-artifacts.toml  known-caches.toml  protected-paths.toml
schemas/: README.md  agent-context.schema.json  cleanup-plan.schema.json  config.schema.json  scan-result.schema.json
scripts/: README.md  invoke-once.ps1
src/: README.md
src/disk_cleanup/: README.md  __init__.py  cli.py  config.py  models.py  tasks.py
src/disk_cleanup/analyzer/: README.md  __init__.py  agent_context.py  candidate_builder.py  rule_engine.py
src/disk_cleanup/cleaner/: README.md  __init__.py  audit.py  cleanup_plan.py  executor.py  recycle.py  selection.py  session.py
src/disk_cleanup/indexer/: README.md  __init__.py  database.py  queries.py
src/disk_cleanup/scanner/: README.md  __init__.py  csv_parser.py  walk.py
src/disk_cleanup/security/: README.md  __init__.py  paths.py  validation.py
src/disk_cleanup/web/: README.md  (+3 more)
tests/: README.md  test_analyzer.py  test_cleanup_flow.py  test_cleanup_security.py  test_cli_surface.py  test_config.py  test_csv_indexer.py  test_invoke_script.py  test_performance.py  test_publication_safety.py  test_safe_paths.py  test_skill_frontmatter.py  test_streaming_scan.py  test_tasks.py  test_validation.py  test_web_server.py  test_windows_recycle_integration.py
tests/fixtures/: README.md  sample-wiztree.csv
(+4 files in other folders)
